# bioinformatics-project

./: .gitignore  15_100000outs.txt  CMakeLists.txt  Graph_extraction_notebook.ipynb  README.md  ecoli_outs.txt  statistics.py  statistics.txt  test_nonpacked_diff.sh  test_nonpacked_script.sh  test_packed_diff.sh  test_packed_script.sh  test_script.sh
doc/: documentation.tex  fer.bst  fer.cls  literatura.bib
doc/chapters/: conclusion.tex  implementation.tex  intro.tex  results.tex  rrr.tex  wavelet-tree.tex
doc/presentation/: main.tex
example/: ecoli_stats.txt
src/: main.cpp
src/rrr/: RRRSequence.cpp  RRRSequence.h  RRRTable.cpp  RRRTable.h
src/shared/: common.h
src/utility/: bioinf_utility.cpp  bioinf_utility.h
src/wavelet/: WaveletNode.cpp  WaveletNode.h  WaveletTree.cpp  WaveletTree.h
tests/: rrr_sequence_tests.cpp  test_diff.sh
tests/commands/: 4_10000.txt  Flu.txt  escherichia_coli.txt
tests/jan/measurements/: 15_100.txt  15_1000.txt  15_10000.txt  15_100000.txt  15_1000000.txt  26_100.txt  26_1000.txt  26_10000.txt  26_100000.txt  26_1000000.txt  4_100.txt  4_1000.txt  4_10000.txt  4_100000.txt  4_1000000.txt  Bact1.txt  Camelpox.txt  Flu.txt  HIV.txt  escherichia_coli.txt
tests/measurements/: 15_100.txt  15_1000.txt  15_10000.txt  15_100000.txt  15_1000000.txt  26_100.txt  26_1000.txt  26_10000.txt  26_100000.txt  26_1000000.txt  4_100.txt  4_1000.txt  4_10000.txt  4_100000.txt  4_1000000.txt  Bact1.txt  Camelpox.txt  Flu.txt  HIV.txt  escherichia_coli.txt
tests/outputs/: 15_10000.txt  26_1000.txt
tests/sequences/: 26_1000000.txt  bact.fa
(+93 files in other folders)
